--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components"
+    "bower_components",
+    "tests"
   ],
   "keywords": [
     "scroll",
